# kasaneiro

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
assets/licenses/: third-party.txt
assets/palettes/: default.json  favorite-core.json  favorite-granulating.json  favorite-vivid.json
assets/pigments/: アイボリーブラック.json  アリザリンクリムソン.json  イエローオーカー.json  インディゴ.json  ウルトラマリンブルー.json  カドミウムイエロー.json  カドミウムオレンジ.json  カドミウムレッド.json  キナクリドンマゼンタ.json  コバルトバイオレット.json  コバルトブルー.json  サップグリーン.json  セルリアンブルー.json  ディオキサジンバイオレット.json  ハンザイエロー.json  バーントアンバー.json  バーントシェンナ.json  ビビッドレッド.json  ビリジアン.json  フタログリーン.json  フタロターコイズ.json  フタロブルー.json  ペインズグレー.json  ローシェンナ.json
assets/presets/: default.json  m1d-paper-streak-only.json
assets/shaders/: advect.wgsl  bake.wgsl  common.wgsl  diffuse.wgsl  display.wgsl  fastdry.wgsl  flowout.wgsl  linesplat.wgsl  relax.wgsl  rewet.wgsl  splat.wgsl  tiledilate.wgsl  tilescan.wgsl  transfer.wgsl  velocity.wgsl
assets/strokes/: two-color-adjacent.json
crates/km/: Cargo.toml
crates/km/src/: lib.rs
crates/paint-core/: Cargo.toml
crates/paint-core/src/: lib.rs  paper.rs  replay.rs  sim.rs  tool.rs
crates/pigment/: Cargo.toml
crates/pigment/src/: lib.rs
docs/: architecture.md  parameters.md  plan.md  refactoring.md  requirements.md  status.md
docs/note/: 00-overview.md  01-fluid-simulation.md  02-pigment-mixing.md  03-layering-glazing-lifting.md  04-implementation-stack.md  05-rust-feasibility.md  06-wet-blending-tuning.md  07-capillary-water.md
src/: app.rs  assets.rs  brush.rs  input.rs  km.rs  main.rs  palette_store.rs  pigment.rs  pigment_store.rs  preset.rs  replay.rs  work.rs
src/app/: linehist.rs  mod.rs
src/app/ui/: canvas.rs  file_menu.rs  layers.rs  mod.rs  palette.rs  panels.rs  tools.rs  tuning.rs
src/gpu/: callback.rs  hot_reload.rs  init.rs  mod.rs  persist.rs  shader_error.rs  snapshot.rs
src/sim/: mod.rs
tests/: shader_compile.rs
